force-app/main/default/objects/CampaignMember/fields/Created_This_Year__c.field-meta.xml
<CustomField>
    <fullName>Created_This_Year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created This Year</label>
    <type>Checkbox</type>
</CustomField>