force-app/main/default/objects/CampaignMember/fields/Trade_Show__c.field-meta.xml
<CustomField>
    <fullName>Trade_Show__c</fullName>
    <formula>text(Campaign.Type) = &apos;Trade Show&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trade Show</label>
    <type>Checkbox</type>
</CustomField>